--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,9 @@ jobs:
         run: |
           bundle exec rails db:create db:migrate
 
+      - name: Build assets
+        run: bundle exec rails tailwindcss:build
+
       - name: Run RSpec tests
         run: bundle exec rspec --format progress
 
